# Copyright (c) 2022-2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")

config("libprocess_group_config") {
  include_dirs = [ "./include" ]
}

ohos_shared_library("libprocess_group") {
  public_configs = [ ":libprocess_group_config" ]

  sources = [
    "./src/cgroup_action.cpp",
    "./src/cgroup_controller.cpp",
    "./src/cgroup_map.cpp",
    "./src/process_group_log.cpp",
    "./src/process_group_util.cpp",
    "./src/sched_policy.cpp",
  ]

  external_deps = [
    "c_utils:utils",
    "config_policy:configpolicy_util",
    "hilog:libhilog",
  ]

  public_external_deps = [ "json:nlohmann_json_static" ]

  sanitize = {
    cfi = true
    cfi_cross_dso = true
    debug = false
  }
  branch_protector_ret = "pac_ret"

  part_name = "resource_schedule_service"
  subsystem_name = "resourceschedule"
}
