# Copyright (c) Huawei Technologies Co., Ltd. 2021-2021. All rights reserved.

import("//build/ohos.gni")
import("//foundation/resourceschedule/resource_schedule_service/ressched/ressched.gni")

config("demo_config") {
  include_dirs = [
    "include/",
    "//utils/native/base/include",
  ]
}

ohos_shared_library("demoplugin_cplusplus") {
  configs = [
    ":demo_config",
    "${ressched_services}:ressched_config",
    "${ressched_interfaces}/innerkits/ressched_client:client_public_config",
  ]

  sources = [
    "src/demo_plugin.cpp",
  ]

  deps = [
    "//base/hiviewdfx/hilog/interfaces/native/innerkits:libhilog",
    "//utils/native/base:utils",
    "${ressched_services}:resschedsvc",
  ]

  external_deps = [
    "appexecfwk_standard:libeventhandler",
  ]

  subsystem_name = "resourceschedule"
  part_name = "ressched"
}