# Copyright (c) 2024-2024 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("../../ressched_executor.gni")

config("cgroup_executor_plugin_config") {
  include_dirs = [
    "framework/include",
    "${resschedexe_common}/include",
    "${resschedexe_interfaces}/innerkits/ressched_executor_client/include",
    "${resourcescheduleservice_path}/ressched/plugins/cgroup_sched_plugin/framework/process_group/include",
    "${resourcescheduleservice_path}/ressched/plugins/cgroup_sched_plugin/common/include"
  ]
}

ohos_shared_library("cgroup_executor_plugin") {
  public_configs = [ ":cgroup_executor_plugin_config" ]

  defines = []

  sources = [
    "framework/src/cgroup_executor_plugin.cpp",
  ]

  deps = [
    "${resourcescheduleservice_path}/ressched/plugins/cgroup_sched_plugin/framework/process_group:libprocess_group",
    "${resschedexe_services}:resschedexesvc",
    "${resschedexe_interfaces}/innerkits/ressched_executor_client:resschedexe_client",
  ]

  external_deps = [
    "hilog:libhilog",
  ]

  public_external_deps = [ "json:nlohmann_json_static" ]

  subsystem_name = "resourceschedule"
  part_name = "resource_schedule_service"

  branch_protector_ret = "pac_ret"

  sanitize = {
    cfi = true
    cfi_cross_dso = true
    debug = false
  }
}
