# Copyright (c) 2024 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/test.gni")
import("../../../ressched/ressched.gni")
import("../../ressched_executor.gni")

group("unittest") {
  testonly = true
  deps = [ ":resschedexefwk_test" ]
}

module_output_path = "resource_schedule_service/ressched_executor"

ohos_unittest("resschedexefwk_test") {
  module_out_path = module_output_path

  include_dirs = [
    "${ressched_common}/include",
    "${resschedexe_common}/include",
    "${resschedexe_interfaces}/innerkits/ressched_executor_client/include",
  ]

  sources = [
    "res_sched_exe_client_test.cpp",
    "res_sched_exe_mgr_test.cpp",
    "res_sched_exe_service_test.cpp",
  ]

  deps = [
    "${resschedexe_services}:resschedexesvc_static",
    "//third_party/googletest:gtest_main",
  ]

  external_deps = [
    "access_token:libaccesstoken_sdk",
    "access_token:libnativetoken",
    "access_token:libtoken_setproc",
    "c_utils:utils",
    "ffrt:libffrt",
    "hilog:libhilog",
    "ipc:ipc_single",
  ]

  public_external_deps = [ "json:nlohmann_json_static" ]

  cflags = [
    "-Dprivate=public",
    "-Dprotected=public",
  ]

  sanitize = {
    cfi = true
    cfi_cross_dso = true
    debug = false
  }

  branch_protector_ret = "pac_ret"
}
