# Copyright (c) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

#####################hydra-fuzz###################
import("//build/config/features.gni")
import("//build/ohos.gni")
import("//build/test.gni")
import("../../../cgroup_sched.gni")
module_output_path = "resource_schedule_service/resource_schedule_service"

##############################fuzztest##########################################
ohos_fuzztest("CgroupSchedFuzzTest") {
  module_out_path = module_output_path
  fuzz_config_file = "${cgroup_sched_path}/test/fuzztest/cgroupsched_fuzzer"

  include_dirs = [
    "${cgroup_sched_framework}/sched_controller/include",
    "${cgroup_sched_interfaces}/innerkits/ressched_client/include",
    "${cgroup_sched_common}/include",
    "${cgroup_sched_framework}/utils/include",
  ]

  cflags = [
    "-g",
    "-O0",
    "-Wno-unused-variable",
    "-fno-omit-frame-pointer",
    "-Dprivate=public",
    "-Dprotected=public",
  ]

  sources = [ "cgroupsched_fuzzer.cpp" ]

  deps = [ "${cgroup_sched_framework}:cgroup_sched" ]

  external_deps = [
    "ability_runtime:app_manager",
    "ability_runtime:wantagent_innerkits",
    "c_utils:utils",
    "common_event_service:cesfwk_innerkits",
    "eventhandler:libeventhandler",
    "hilog:libhilog",
    "hisysevent:libhisysevent",
    "hitrace:hitrace_meter",
    "ipc:ipc_single",
    "samgr:samgr_proxy",
    "window_manager:libwm",
  ]

  if (has_bg_task_mgr) {
    defines = [ "CONFIG_BGTASK_MGR" ]
    external_deps += [ "background_task_mgr:bgtaskmgr_innerkits" ]
  }

  part_name = "resource_schedule_service"
  subsystem_name = "resourceschedule"
}

###############################################################################
group("fuzztest") {
  testonly = true
  deps = []
  deps += [
    # deps file
    ":CgroupSchedFuzzTest",
  ]
}
###############################################################################
